--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,10 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Acclerometer"></activity>
-        <activity android:name=".SensorActivity">
-
-        </activity>
+        <activity android:name=".AddAcivity"></activity>
+        <activity android:name=".GyroScope" />
+        <activity android:name=".Acclerometer" />
+        <activity android:name=".SensorActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
