--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".AddAcivity"></activity>
+        <activity android:name=".NotificationActivity"></activity>
+        <activity android:name=".ProximitySensor" />
+        <activity android:name=".AddAcivity" />
         <activity android:name=".GyroScope" />
         <activity android:name=".Acclerometer" />
         <activity android:name=".SensorActivity" />
