--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".NotificationActivity"></activity>
+        <service android:name=".service.MyService"
+            android:enabled="true"
+            android:exported="false"
+            ></service>
+
+        <activity android:name=".ServicesActivity"></activity>
+        <activity android:name=".BroadCastActivity" />
+        <activity android:name=".NotificationActivity" />
         <activity android:name=".ProximitySensor" />
         <activity android:name=".AddAcivity" />
         <activity android:name=".GyroScope" />
